--- a/portfolio/CSA/app/css/last.css
+++ b/portfolio/CSA/app/css/last.css
@@ -39,7 +39,7 @@
           -ms-flex-pack: center;
               justify-content: center;
       margin: 0 auto;
-      width: 270px;
+      width: 260px;
       padding: 0;
       position: relative; }
       #last_page .custom_dots ul li {
@@ -57,7 +57,7 @@
         -webkit-align-items: center;
             -ms-flex-align: center;
                 align-items: center;
-        margin: 0 6px;
+        margin: 0 10px;
         cursor: pointer; }
         #last_page .custom_dots ul li span {
           display: block;
@@ -304,6 +304,10 @@
                     transform: translate(-50%, -50%); }
         #last_page .container .slider2 .slide3 .place_block .description_block {
           padding: 10px;
+          -webkit-box-flex: 1;
+          -webkit-flex-grow: 1;
+              -ms-flex-positive: 1;
+                  flex-grow: 1;
           display: -webkit-box;
           display: -webkit-flex;
           display: -ms-flexbox;
@@ -335,14 +339,25 @@
           display: -webkit-box;
           display: -webkit-flex;
           display: -ms-flexbox;
-          display: flex; }
+          display: flex;
+          position: relative; }
           #last_page .container .slider2 .slide3 .place_block .links a {
             height: 20px;
             width: 20px;
-            margin-right: 10px; }
+            margin-right: 10px;
+            outline: none; }
             #last_page .container .slider2 .slide3 .place_block .links a img {
               width: 100%;
               height: 100%; }
+          #last_page .container .slider2 .slide3 .place_block .links .prices {
+            width: auto;
+            height: auto;
+            color: #f4ea48;
+            text-decoration: none;
+            font: 1.6em "HelveticaNeueCyrMedium";
+            position: absolute;
+            right: 0;
+            margin: 0; }
       #last_page .container .slider2 .slide3 .active_place {
         border-color: #847f2f; }
         #last_page .container .slider2 .slide3 .active_place .decor1,
@@ -404,6 +419,18 @@
           -webkit-transform: rotate(90deg);
               -ms-transform: rotate(90deg);
                   transform: rotate(90deg); }
+        #last_page .container .slider2 .slide3 .tab_container .soon_banner {
+          display: block;
+          position: absolute;
+          right: -110px;
+          bottom: 50px;
+          -webkit-transform: rotate(-30deg);
+              -ms-transform: rotate(-30deg);
+                  transform: rotate(-30deg);
+          z-index: 2;
+          width: 385px;
+          height: 49px;
+          background: url(../img/soon_banner.png); }
         #last_page .container .slider2 .slide3 .tab_container .tab_content {
           height: 100%;
           position: relative;
