--- a/portfolio/CSA/app/scss/last.scss
+++ b/portfolio/CSA/app/scss/last.scss
@@ -32,7 +32,7 @@
             list-style: none;
             justify-content: center;
             margin: 0 auto;
-            width: 270px;
+            width: 260px;
             padding: 0;
             position: relative;
             li {
@@ -43,7 +43,7 @@
                 background-size: cover;
                 display: flex;
                 align-items: center;
-                margin: 0 6px;
+                margin: 0 10px;
                 cursor: pointer;
                 span {
                     display: block;
@@ -268,6 +268,7 @@
                     }
                     .description_block {
                         padding: 10px;
+                        flex-grow: 1;
                         display: flex;
                         flex-direction: column;
                         justify-content: space-between;
@@ -292,14 +293,26 @@
                     }
                     .links {
                         display: flex;
+                        position: relative;
                         a {
                             height: 20px;
                             width: 20px;
                             margin-right: 10px;
+                            outline: none;
                             img {
                                 width: 100%;
                                 height: 100%;
                             }
+                        }
+                        .prices {
+                            width: auto;
+                            height: auto;
+                            color: #f4ea48;
+                            text-decoration: none;
+                            font: 1.6em "HelveticaNeueCyrMedium";
+                            position: absolute;
+                            right: 0;
+                            margin: 0;
                         }
                     }
                 }
@@ -366,6 +379,17 @@
                             top: 50%;
                             right: 10px;
                             transform: rotate(90deg);
+                        }
+                        .soon_banner {
+                            display: block;
+                            position: absolute;
+                            right: -110px;
+                            bottom: 50px;
+                            transform: rotate(-30deg);
+                            z-index: 2;
+                            width: 385px;
+                            height: 49px;
+                            background: url(../img/soon_banner.png);
                         }
                     .tab_content {
                         height: 100%;
