--- a/portfolio/CSA/app/css/start.css
+++ b/portfolio/CSA/app/css/start.css
@@ -89,8 +89,9 @@ body {
     min-height: 500px; } }
 
 @media screen and (max-width: 1025px) {
-  #start_page .container {
-    min-height: 568px; }
+  #start_page {
+    height: 100vh;
+    min-height: 600px; }
   #start_page {
     position: relative;
     left: 0;
@@ -104,4 +105,6 @@ body {
 @media screen and (max-width: 480px) {
   #start_page .block_logo {
     width: 28em;
-    height: 28em; } }
+    height: 28em;
+    margin-left: -14em;
+    margin-top: -14em; } }
