--- a/portfolio/CSA/app/scss/common.scss
+++ b/portfolio/CSA/app/scss/common.scss
@@ -32,6 +32,7 @@
 body {
     font-size: 10px;
     background: #0f0f0f;
+    overflow-x: hidden;
 }
 
 .body_active {
@@ -226,6 +227,20 @@ body {
 
 .header_top_last {
     top: -100% !important;
+}
+
+.slider_content .title {
+    text-transform: uppercase;
+    display: none !important;
+    color: #F4EA49;
+    font: 2.3em "HelveticaNeueCyrBold";
+    text-align: center;
+    position: relative !important;
+    width: 100% !important;
+    height: auto !important;
+    padding-top: 40px;
+    margin-bottom: 20px;
+    letter-spacing: 0.1em;
 }
 
 #footer {
