--- a/portfolio/CSA/app/scss/home.scss
+++ b/portfolio/CSA/app/scss/home.scss
@@ -392,6 +392,12 @@
 }
 
 @media screen and (max-width: 1025px) {
+    #home_page .container .content {
+        min-height: 600px;
+    }
+    #start_page::before {
+         display: none;
+    }
     #home_page,
     #start_page {
         display: block !important;
