--- a/portfolio/CSA/app/scss/last.scss
+++ b/portfolio/CSA/app/scss/last.scss
@@ -1,6 +1,7 @@
 #last_page {
     position: relative;
     z-index: 1;
+    overflow: hidden;
     .active_bg {
         position: absolute;
         height: 100%;
@@ -10,6 +11,9 @@
         background: url(../img/animate_bg_last.jpg) no-repeat center center;
         background-size: cover;
         transition: .4s;
+    }
+    .active_bg_fixed {
+        position: fixed;
     }
     .custom_dots {
         position: absolute;
@@ -272,7 +276,7 @@
                         display: flex;
                         flex-direction: column;
                         justify-content: space-between;
-                        .title {
+                        .title_place {
                             font: 1.7em "MyriadProRegular";
                             color: #fff;
                             text-transform: uppercase;
@@ -305,11 +309,16 @@
                             }
                         }
                         .prices {
-                            width: auto;
-                            height: auto;
+                            width: 50px;
+                            height: 20px;
+                            border: 1px solid #f4ea48;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
                             color: #f4ea48;
                             text-decoration: none;
-                            font: 1.6em "HelveticaNeueCyrMedium";
+                            font: 1.2em "HelveticaNeueCyrMedium";
+                            border-radius: 4px;
                             position: absolute;
                             right: 0;
                             margin: 0;
@@ -481,6 +490,7 @@
                                 padding: 0;
                                 a {
                                     color: #fff;
+                                    white-space: nowrap;
                                     text-decoration: none;
                                     font: 1.4em "HelveticaNeueCyrMedium";
                                     span {
@@ -499,6 +509,7 @@
                         }
                         .center_block {
                             position: relative;
+                            box-sizing: border-box;
                             width: 60%;
                             padding: 0 15px;
                             span {
@@ -745,5 +756,248 @@
                 }
             }
         }
+    }
+}
+
+@media screen and (max-width: 1240px) {
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .block_left h6 {
+        font-size: 2.6em;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .block_left .photo {
+        font-size: 1.8em;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .block_left ul a,
+    #last_page .container .slider2 .slide4 .slider_gallery .cards .block_left .desc .date, #last_page .container .slider2 .slide4 .slider_gallery .cards .block_right .desc .date,
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .right_block .txt p,
+    #last_page .container .slider2 .slide3 .place_block .description_block .adress,
+    #last_page .container .slider2 .slide3 .place_block .description_block .title {
+        font-size: 1.2em;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .cards .block_left .desc h6, #last_page .container .slider2 .slide4 .slider_gallery .cards .block_right .desc h6 {
+        font-size: 1.4em;
+    }
+}
+
+@media screen and (max-width: 1240px) {
+    #last_page .container .slider2 .slide3 .place_block .description_block .title_place {
+        font-size: 1.2em;
+    }
+}
+
+@media screen and (max-width: 1025px) {
+    #last_page .active_bg {
+        height: 100vh;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .center_block {
+        width: 100%;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .right_block .img img {
+        width: 100%;
+        height: 100%;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .right_block .img {
+        height: 203px;
+        margin-top: 30px;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .block_left h6 {
+        display: none;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .block_left {
+        width: 100%;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery {
+        height: auto;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first {
+        flex-wrap: wrap;
+        height: auto;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .block_left ul {
+        display: flex;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .block_left ul li {
+        margin-right: 10px;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .center_block {
+        padding: 0;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .center_block .photo_slider .slide {
+        height: 200px;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .center_block .arrow_left_photo {
+        left: 0;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .center_block .arrow_right_photo {
+        right: 0;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .right_block {
+        width: 100%;
+        box-sizing: border-box;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .center_block .photo_slider .slide img {
+        height: 203px !important;
+    }
+    #last_page .container .slider2 .slide4 .btn_bottom {
+           display: none;
+    }
+    #last_page .container .slider2 .slide {
+        margin-bottom: 30px;
+    }
+    #last_page .container .slider2 .slide3 .tab_container .top_title span {
+        font-size: 3em;
+        display: block;
+        margin-top: 5px;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .cards {
+        display: none;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .block_left .photo {
+        text-align: left;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .center_block .photo_slider .slide img {
+        height: 100%;
+        width: auto;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .block_left .date {
+        margin-top: 0;
+    }
+    #last_page .container .slider2 .slide1 .slider_news .slide,
+    #last_page .container .slider2 .slide1 .arrow_right_slide1,
+    #last_page .container .slider2 .slide1 .arrow_left_slide1 {
+        height: 500px;
+    }
+    #last_page .container .slider2 .slide3 .place_block .description_block .title_place {
+        padding-top: 5px;
+        margin-bottom: 10px;
+        font-size: 1.7em;
+    }
+    #last_page .container .slider2 .slide3 .tab_container {
+        height: 400px;
+    }
+    #last_page .container .slider2 .slide3 .place_block .links a {
+        width: 30px;
+        height: 30px;
+    }
+    #last_page .container .slider2 .slide3 .place_block .links .prices {
+        height: 30px;
+        width: 60px;
+        font-size: 1.4em;
+    }
+    #last_page .container .slider2 .slide3 .place_block .links {
+        margin-top: 10px;
+    }
+    #last_page .container .slider2 .slide3 .place_block .description_block .adress {
+        font-size: 1.6em;
+    }
+    #last_page .container .slider2 .slide3 .place_block .img_block {
+        width: 100% !important;
+        height: auto;
+    }
+    #last_page .container .slider2 .slide3 .place_block {
+        display: block;
+    }
+    #last_page .container .slider2 .slide {
+        height: auto;
+    }
+    #last_page .container .slider2 .tab_item {
+        height: auto;
+    }
+      #last_page .container {
+         height: auto;
+      }
+      #last_page .custom_dots {
+        display: none;
+      }
+
+}
+
+@media screen and (max-width: 808px) {
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .block_left ul {
+        flex-wrap: wrap;
+    }
+    #last_page .container .slider2 .slide4 .slider_gallery .slide_first .block_left ul li {
+        margin-bottom: 5px;
+    }
+    #last_page .container .slider2 .slide3 .place_block {
+        display: flex;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    #last_page .container .slider2 .slide3 .tab_item .line:before {
+        content: '';
+        position: absolute;
+        display: block;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 10px;
+        height: 7px;
+        top: -5px;
+        background: url(../img/fr_indicator.png) no-repeat center center;
+    }
+    #last_page .container .slider2 .slide3 .tab_container .gallery .photo img {
+        height: 100%;
+        width: auto;
+    }
+    #last_page .container .slider2 .slide3 .place_block .indicator {
+        display: none;
+    }
+    #last_page .container .slider2 .slide3 .place_block .img_block {
+        width: 40% !important;
+    }
+    #last_page .container .slider2 .slide3 .tab_item .content {
+        display: block;
+    }
+    #last_page .container .slider2 .slide1 .slider_news .slide a {
+        font-size: 2.6em;
+    }
+}
+
+@media screen and (max-width: 568px) {
+      #last_page .container .slider2 .slide3 .place_block .img_block {
+        width: 50% !important;
+      }
+      #last_page .container .slider2 .slide3 .tab_container .top_title span {
+        display: block;
+      }
+      #last_page .container .slider2 .slide3 .tab_container .top_title span {
+        font-size: 2.5em;
+        padding-top: 3px;
+      }
+}
+
+@media screen and (max-width: 450px) {
+    #last_page .container .slider2 .slide1 .slider_news .slide {
+        height: 400px;
+    }
+    #last_page .container .slider2 .slide1 .bottom img {
+        display: none;
+    }
+    #last_page .container .slider2 .slide1 .arrow_right_slide1, #last_page .container .slider2 .slide1 .arrow_left_slide1 {
+        height: 400px;
+    }
+    #last_page .container .slider2 .slide3 .tab_container .top_title span {
+        font-size: 1.8em;
+        padding-top: 6px;
+        letter-spacing: 0.3em;
+      }
+      #last_page .container .slider2 .slide3 .place_block {
+        display: block;
+      }
+      #last_page .container .slider2 .slide3 .place_block .img_block {
+        width: 100% !important;
+      }
+      #last_page .container .slider2 .slide3 .place_block .description_block .title_place {
+        font-size: 2em;
+      }
+      #last_page .container .slider2 .slide3 .place_block .description_block .adress {
+        font-size: 1.6em;
+      }
+}
+
+@media screen and (max-width: 370px) {
+    #footer .left_block .txt {
+        display: none;
     }
 }
