--- a/portfolio/CSA/app/css/last.css
+++ b/portfolio/CSA/app/css/last.css
@@ -476,6 +476,11 @@
             height: 100%;
             margin: 0 10px;
             outline: none; }
+            #last_page .container .slider2 .slide3 .tab_container .gallery .photo:before {
+              content: '';
+              display: block;
+              width: 100%;
+              height: 100%; }
             #last_page .container .slider2 .slide3 .tab_container .gallery .photo img {
               position: absolute;
               width: 100%;
