--- a/portfolio/CSA/app/scss/last.scss
+++ b/portfolio/CSA/app/scss/last.scss
@@ -433,6 +433,12 @@
                             height: 100%;
                             margin: 0 10px;
                             outline: none;
+                            &:before {
+                                content: '';
+                                display: block;
+                                width: 100%;
+                                height: 100%;
+                            }
                             img {
                                 position: absolute;
                                 width: 100%;
