--- a/portfolio/CSA/app/css/last.css
+++ b/portfolio/CSA/app/css/last.css
@@ -476,19 +476,14 @@
             height: 100%;
             margin: 0 10px;
             outline: none; }
-            #last_page .container .slider2 .slide3 .tab_container .gallery .photo:before {
-              content: '';
-              display: block;
-              width: 100%;
-              height: 100%; }
             #last_page .container .slider2 .slide3 .tab_container .gallery .photo img {
               position: absolute;
               width: 100%;
               top: 50%;
-              left: 0;
-              -webkit-transform: translateY(-50%);
-                  -ms-transform: translateY(-50%);
-                      transform: translateY(-50%); }
+              left: 50%;
+              -webkit-transform: translate(-50%, -50%);
+                  -ms-transform: translate(-50%, -50%);
+                      transform: translate(-50%, -50%); }
       #last_page .container .slider2 .slide4 {
         position: relative; }
         #last_page .container .slider2 .slide4 .btn_bottom {
@@ -924,8 +919,7 @@
     top: -5px;
     background: url(../img/fr_indicator.png) no-repeat center center; }
   #last_page .container .slider2 .slide3 .tab_container .gallery .photo img {
-    height: 100%;
-    width: auto; }
+    height: 100%; }
   #last_page .container .slider2 .slide3 .place_block .indicator {
     display: none; }
   #last_page .container .slider2 .slide3 .place_block .img_block {
@@ -945,6 +939,8 @@
     padding-top: 3px; } }
 
 @media screen and (max-width: 450px) {
+  #last_page .container .slider2 .slide3 .tab_container {
+    height: 320px; }
   #last_page .container .slider2 .slide1 .slider_news .slide {
     height: 400px; }
   #last_page .container .slider2 .slide1 .bottom img {
