--- a/portfolio/CSA/app/css/last.css
+++ b/portfolio/CSA/app/css/last.css
@@ -480,10 +480,9 @@
               position: absolute;
               width: 100%;
               top: 50%;
-              left: 50%;
-              -webkit-transform: translate(-50%, -50%);
-                  -ms-transform: translate(-50%, -50%);
-                      transform: translate(-50%, -50%); }
+              -webkit-transform: translateY(-50%);
+                  -ms-transform: translateY(-50%);
+                      transform: translateY(-50%); }
       #last_page .container .slider2 .slide4 {
         position: relative; }
         #last_page .container .slider2 .slide4 .btn_bottom {
@@ -919,7 +918,8 @@
     top: -5px;
     background: url(../img/fr_indicator.png) no-repeat center center; }
   #last_page .container .slider2 .slide3 .tab_container .gallery .photo img {
-    height: 100%; }
+    height: 100%;
+    width: auto; }
   #last_page .container .slider2 .slide3 .place_block .indicator {
     display: none; }
   #last_page .container .slider2 .slide3 .place_block .img_block {
